<resources>
    <string name="app_name">valut</string>
    <string name="action_settings">Settings</string>

    <string name="africaZAR">ZAR</string>
    <string name="russianRUB">RUB</string>
    <string name="singaporeSGD">SGD</string>
    <string name="turkishTRY">TRY</string>

    <string name="africa">South African\nrand</string>
    <string name="russian">Русский рубль</string>
    <string name="singapore">Singapore\ndollar</string>
    <string name="turkish">Turkish\nlira</string>

    <string name="capitalRU">Moscow</string>
    <string name="capitalSG">Singapore</string>
    <string name="capitalTR">Ankara</string>
    <string name="capitalAF">Cairo</string>

    <string name="flag">flag</string>

    <string name="USD">65.2</string>
    <string name="EUR">75.14</string>
    <string name="date">31.12.2018</string>

    <string name="state">Работает</string>
    <string name="bank">Банкомат</string>
    <string name="otdel">Отделение</string>
    <string name="street">Москва.ул. Вавилова.д. 7</string>
    <string name="hourse">00:00-00:00</string>



</resources>