<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/listview_selector"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="159dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/flagImage"
                    android:layout_width="16dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/flag"
                    android:src="@drawable/ru" />

                <TextView
                    android:id="@+id/abbreviation"
                    android:layout_width="32dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:text="@string/russianRUB"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="119dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/russian"
                android:textColor="#3F51B5"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/kursUP"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/USD"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/kursFALL"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/USD"
        android:textColor="#3F51B5" />

</LinearLayout>